Fix layout of buttons on small screens and add "view" item back in for file records

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -1084,13 +1084,6 @@ table.dataTable {
     }
   }
 
-  .content-wrap.full_record,
-  #is-admin-unit {
-    .restricted-access {
-      padding: 10px;
-    }
-  }
-
   .file_record {
     .columns-resize {
       .is-10 {
